fixup title width on mobile

--- a/app/assets/stylesheets/pages/landing.sass
+++ b/app/assets/stylesheets/pages/landing.sass
@@ -12,6 +12,9 @@
       text-align: center
       img
         width: 70%
+    @media(max-width: 750px)
+      .title
+        max-width: 100%
   .breadcrumbs
     font-weight: bold
     .arrow
